...
	private var currentRow: Int?
	private var cellIdentifier = "mainViewCell"

	public init() {
		super.init(nibName: nil, bundle: nil)
		
		self.tabBarItem = UITabBarItem(title: "Каталог рецептов", image: ImagesStore.catalogIcon, selectedImage: nil)
	}
	
	required init?(coder: NSCoder) {
		fatalError("init(coder:) has not been implemented")
	}
	
...
		
	}
}

private extension MainViewController {
	func configureTabBarController() {
		self.tabBarController?.title = "Мои рецепты"
		
		self.tabBarController?.navigationItem.rightBarButtonItems = [
			UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(self.actionAddButton))
		]
		
		self.tabBarController?.navigationItem.leftBarButtonItems = []
...
